--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 script:
   - cd src
   - docker build --no-cache -t naseukolycz/idempiere-micro:test .
-  - docker run --name idempiere-micro-karaf-test -d naseukolycz/idempiere-micro:test
+  - docker run --name idempiere-micro-karaf-test -p 8181:8181 -d naseukolycz/idempiere-micro:test
   - sleep 10
   - docker exec -i idempiere-micro-karaf-test /tmp/setup_idempiere_micro_karaf.sh
   - sleep 10
