--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ script:
   - sleep 10
   - wget "http://localhost:8181/idempiere/api/status"
   - str="works!"
-  - if [[ $(< status) != "$str" ]]; then
+  - value=`cat status`
+  - if [[ "$value" != "$str" ]]; then
   -   exit 1    
   - fi
